# ledgrrr

./: .gitignore  404.html  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ledgerr-mcp  Justfile  PRD-10.md  PRD-HANDOVER.md  README.md  audit-playbook.html  calendar.html  capability-map.html  cog.toml  concept-affinity.html  constraints.html  document-ingestion.html  index.html  iso-pipeline-objects.html  iso.html  kani-toolchain.toml  layout.html  ledger-ops.html  ledgrrr.just  legal.html  match-visualization-plan.html  mcp-surface.html  ontology-type-mesh.html  pipeline.html  print.html  render.html  rule-engine.html  searcher-c2a407aa.js  searchindex-c072d1a1.js  server.json  theory.html  toc-f88c394d.js  toc.html  (+8 more)
.b00t/: tasks.json
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml  kani.yml  openmetadata-mcp.yml  publish.yml  wrkflw-ci-build.yml  wrkflw-docgen.yml
book/: book.toml
book/src/: SUMMARY.md  intro.md  iso-pipeline-objects.md
crates/arc-kit-au/src/: edge.rs  graph.rs  node.rs
crates/b00t-iface/src/core/: surface.rs
crates/b00t-iface/src/handshake/: mod.rs
crates/b00t-iface/tests/: handshake_integration.rs
crates/b00t-reflect/: Cargo.toml
crates/b00t-reflect-types/: Cargo.toml
crates/b00t-reflect-types/src/: lib.rs
crates/b00t-reflect/src/: lib.rs
crates/beankeeper-bridge/: Cargo.toml
crates/beankeeper-bridge/src/: lib.rs
crates/holon-viz/: Cargo.toml
crates/holon-viz-wasm/: Cargo.toml
crates/holon-viz-wasm/src/: lib.rs
crates/holon-viz-wasm/tests/: web.rs
crates/holon-viz/src/: controller.rs  cytoscape.rs  domain.rs  emitter.rs  gen.rs  holon.rs  lib.rs  log.rs  observer.rs  renderer.rs  type_graph.rs
crates/holon-viz/tests/: holon_viz_comprehensive.rs
crates/ledger-attest/: Cargo.toml
crates/ledger-attest/src/: lib.rs
crates/ledger-core/: Cargo.toml
crates/ledger-core/src/: attest.rs  au_rd.rs  classify.rs  constraints.rs  crypto.rs  ingest.rs  integration_tests.rs  iso_objects.rs  ledger_ops.rs  legal.rs  lib.rs  ontology.rs  pipeline.rs  rule_registry.rs  us_rdc.rs  validation.rs  watcher.rs  workbook.rs
crates/ledger-core/tests/: pdf_ingest_integration.rs
crates/ledgerr-host/: Cargo.toml
crates/ledgerr-host/src/: evidence.rs  internal_openai.rs  lib.rs  notification.rs  settings_backend.rs
crates/ledgerr-host/src/notification/: stderr_fallback.rs  windows_toast.rs
crates/ledgerr-host/src/settings/: store.rs
crates/ledgerr-host/src/settings_backend/: json_file.rs  windows_registry.rs
crates/ledgerr-host/src/tray/: mod.rs  native.rs  runtime.rs
crates/ledgerr-host/tests/: settings_atomicity.rs  settings_roundtrip.rs
crates/ledgerr-host/ui/: build.mjs  index.html  main-legacy.js  main.js  package-lock.json  package.json  style.css  test-autorun.js  tsconfig.json
crates/ledgerr-host/ui/src/: main.ts  types.ts
crates/ledgerr-llm/src/: lib.rs
crates/ledgerr-mcp/: Cargo.toml
crates/ledgerr-mcp-core/: Cargo.toml
crates/ledgerr-mcp-core/src/: provider.rs
crates/ledgerr-mcp/src/: actor.rs  au_rd.rs  batch_executor.rs  contract.rs  crypto.rs  events.rs  focus_tool.rs  gate.rs  lib.rs  mcp_adapter.rs  ontology.rs  openmetadata.rs  schema.rs  us_rdc.rs  xero_service.rs
crates/ledgerr-mcp/src/providers/: definitions.rs
crates/ledgerr-mcp/tests/: batch_operations.rs  contract_codegen.rs  mcp_adapter_contract.rs  mcp_provider_smoke.rs  mcp_stdio_e2e.rs  ontology_contract.rs  ontology_mcp_e2e.rs  openmetadata_ontology.rs  pipeline_e2e.rs  query_transactions_tests.rs  tax_assist_contract.rs  tax_evidence_chain_contract.rs  unified_queue.rs
crates/ledgerr-model-server/: Cargo.toml
crates/ledgerr-model-server/src/: lib.rs
crates/ledgerr-tauri/capabilities/: main.json
crates/ledgerr-tauri/src/: main.rs  tray.rs
crates/mdbook-rhai-mermaid/: Cargo.toml
crates/msft-agent-gov-ledgrrr/: Cargo.toml  SPEC.md
crates/msft-agent-gov-ledgrrr/src/: capability_bridge.rs  compliance.rs  http_gateway.rs  lib.rs  policy.rs  rings.rs
crates/rotel-visual/src/: lib.rs
crates/rotel-visual/tests/: health_dashboard_tests.rs
crates/ufo-types/: Cargo.toml
crates/ufo-types/src/: iso.rs  lib.rs  satisfies.rs  ufo.rs
crates/ui/: bindings.ts
docs/: agent-mcp-runbook.md  mcp-capability-contract.md  ontological-implementation-spec.md  rotel-otel-journal-surface.md  webview2-evaluation.md
kani-proofs/: Cargo.toml  INVENTORY.md
kani-proofs/src/: commit_gate.rs  invoice_arithmetic.rs  lib.rs  meta_ctx.rs  vendor_constraints.rs  z3_result.rs
plugins/l3dg3rr-plugin-create/python/: pyproject.toml
scripts/: inspect-viz-cdp.ps1  ledgrrr-viz-serve.py  test-holon-viz.ps1
scripts/training/: check-determinism.py  check-scripts-parse.py  collect-b00t-training-data.py  export-gguf.py  fine-tune.py  generate-training-data.py  show-stats.py  test_gguf_conversion.py  test_pipeline.py
skills/ledgerr-devops/: SKILL.md
theme/: mdbook-nav-override-2a0f46ea.js  rhai-live-bb027f47.css  rhai-live-ca0b7d40.js  rhai-live-core-7e58f9cd.js
types/: domain.kerm
xtask/: Cargo.toml
xtask/src/: kerm.rs  main.rs
