[package]
name = "beankeeper-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Bridge: OFX bank exports → beankeeper double-entry transactions"

[dependencies]
beankeeper = { workspace = true }
ofx-rs = { workspace = true }
rust_decimal = { workspace = true }
blake3 = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
rust_decimal_macros = "1"
serde_json = { workspace = true }

[lints]
workspace = true
