[package]
name = "holon-viz-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WASM bindings for holon-viz graph filtering — client-side Cytoscape graph queries compiled to WebAssembly"
repository = "https://github.com/PromptExecution/ledgrrr"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
holon-viz = { path = "../holon-viz" }
serde.workspace = true
serde_json.workspace = true
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lints.rust]
unsafe_code = "deny"
