[package]
name = "holon-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Holonic visualization engine — Cytoscape.js JSON, SysML-v2, OWL2/Turtle emission, and append-only process control"

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true
specta = { version = "=2.0.0-rc.25", features = ["derive"] }

[[bin]]
name = "holon-viz-demo"
path = "src/bin/demo.rs"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
