[package]
name = "holon-viz"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Holonic visualization engine — Cytoscape.js JSON, SysML-v2, OWL2/Turtle emission, and append-only process control"

[dependencies]
serde.workspace = true
serde_json.workspace = true
blake3.workspace = true
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[[bin]]
name = "holon-viz-demo"
path = "src/bin/demo.rs"

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
# CDP integration test dependency — only required when TEST_WEBVIEW=1 is set
# cargo test --test holon_viz_visual_e2e      # e2e with live Tauri WebView2
# cargo test                                    # unit + integration (no webview)
