[package]
name = "ledgerr-host"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "host-tauri"

[[bin]]
name = "host-window"
path = "src/bin/host-window.rs"

[[bin]]
name = "host-tray"
path = "src/bin/host-tray.rs"

[[bin]]
name = "host-tauri"
path = "src/bin/tauri/main.rs"

[features]
local-llm = [
    "dep:candle-core",
    "dep:candle-transformers",
    "dep:candle-nn",
    "dep:tokenizers",
    "dep:hf-hub",
]
mistralrs-llm = ["dep:mistralrs", "dep:candle-core"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rig-core = "0.35.0"
ledger-core = { workspace = true }
arc-kit-au = { path = "../arc-kit-au" }
holon-viz = { path = "../holon-viz" }
serde = { workspace = true }
serde_json = { workspace = true }
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }

candle-core = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["ureq"] }
mistralrs = { version = "0.8", optional = true }

[target.'cfg(windows)'.dependencies]
slint = "1.16.0"
tray-icon = { version = "0.22.0", default-features = false }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
