[package]
name = "ledgerr-host"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
local-llm = [
    "dep:candle-core",
    "dep:candle-transformers",
    "dep:candle-nn",
    "dep:tokenizers",
    "dep:hf-hub",
]
mistralrs-llm = ["dep:mistralrs", "dep:candle-core"]

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
rig-core = "0.35.0"
ledger-core = { workspace = true }
arc-kit-au = { path = "../arc-kit-au" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

candle-core = { version = "0.10", optional = true }
candle-transformers = { version = "0.10", optional = true }
candle-nn = { version = "0.10", optional = true }
tokenizers = { version = "0.22", optional = true, default-features = false, features = ["onig"] }
hf-hub = { version = "0.5", optional = true, default-features = false, features = ["ureq"] }
mistralrs = { version = "0.8", optional = true }

[target.'cfg(windows)'.dependencies]
slint = "1.16.0"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "UI_Notifications",
    "Data_Xml_Dom",
] }
windows-sys = { version = "0.61.2", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_UI_WindowsAndMessaging"] }

[dev-dependencies]
tempfile = { workspace = true }

[lints]
workspace = true
