[package]
name = "ledgerr-mcp-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "McpProvider trait, StdioMcpProvider, and McpProviderRegistry — reusable MCP provider abstraction"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
