[package]
name = "ledgerr-mcp"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
agentmesh = { workspace = true }
arc-kit-au = { path = "../arc-kit-au" }
blake3 = "1.8.3"
chrono = { workspace = true }
ledger-core = { version = "=1.8.1", path = "../ledger-core" }
ledgerr-focus = { workspace = true }
ledgerr-mcp-core = { workspace = true }
ledgerr-xero = { version = "=1.8.1", path = "../ledgerr-xero", optional = true }
msft-agent-gov-ledgrrr = { path = "../msft-agent-gov-ledgrrr" }
crossbeam = "0.8"
cfg-if = "1.0"
ledgerr-llm = { version = "=1.8.1", path = "../ledgerr-llm", optional = true }
rust_decimal = { version = "1.41.0", features = ["serde"] }
rust_xlsxwriter = { workspace = true }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
tracing = { workspace = true }
shellexpand = "3.1.0"

# plugin_info — always available (cross-platform system metadata)
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

# self-update feature deps — only compiled when the feature is active
reqwest = { version = "0.12", features = ["blocking", "json", "rustls-tls"], default-features = false, optional = true }
semver = { version = "1", optional = true }

# winreg — Windows-only, safe registry wrapper; gated at the cfg level in code
[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
default = ["core", "events", "reconciliation", "hsm", "ontology", "classification", "audit", "tax", "xero", "llm", "legacy"]
b00t = []
core = []
events = ["core"]
reconciliation = ["core"]
hsm = ["core"]
ontology = ["core"]
classification = ["core"]
audit = ["core"]
tax = ["core"]
xero = ["core", "dep:ledgerr-xero"]
llm = ["core", "dep:ledgerr-llm"]
full = ["core", "events", "reconciliation", "hsm", "ontology", "classification", "audit", "tax", "xero", "llm"]
self-update = ["dep:reqwest", "dep:semver"]

# Legacy: gates the old mcp_adapter.rs dispatch and the pre-actor server
# match-statement path.  The new actor/gate channel system is the default;
# this flag keeps the old code compiled for historical reference until
# the migration is fully validated and the old path can be removed.
legacy = ["core"]

[dev-dependencies]
tempfile = "3"
calamine = "0.34"

# Enable the b00t feature for tests that exercise McpProvider infrastructure
# and register_default_providers graceful-degradation coverage.
[dev-dependencies.ledgerr-mcp]
path = "."
features = ["b00t"]

[lints]
workspace = true
