[package]
name = "mdbook-rhai-mermaid"
version = "1.9.0"
edition = "2021"
description = "mdbook preprocessor: rhai DSL code blocks → Mermaid flowchart diagrams"

[lib]
name = "mdbook_rhai_mermaid"
path = "src/lib.rs"

[[bin]]
name = "mdbook-rhai-mermaid"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = "2"
